--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "types:watch": "tsbb types --watch",
     "dev": "npm run types:watch & npm run watch",
     "watch": "tsbb watch",
-    "build": "tsbb build"
+    "build": "tsbb build",
+    "server": "node lib/server/server.js"
   },
   "author": "Kenny Wong <wowohoo@qq.com>",
   "license": "MIT",
