--- a/package.json
+++ b/package.json
@@ -46,13 +46,17 @@
     "ranking"
   ],
   "devDependencies": {
-    "@types/cheerio": "^0.22.11",
+    "@types/bluebird": "^3.5.27",
+    "@types/cheerio": "^0.22.13",
     "@types/dotenv": "^6.1.1",
     "@types/ejs": "^2.6.3",
     "@types/fs-extra": "^5.0.5",
     "@types/node": "^11.13.4",
     "@types/node-fetch": "^2.3.2",
+    "@types/sqlite3": "^3.1.5",
+    "@types/validator": "^10.11.3",
     "@uiw/formatter": "^1.2.3",
+    "babel-preset-env": "^1.7.0",
     "cheerio": "^1.0.0-rc.3",
     "console-emojis": "^1.0.3",
     "dotenv": "^7.0.0",
@@ -60,7 +64,10 @@
     "fs-extra": "^7.0.1",
     "gh-pages": "^2.0.1",
     "jest": "^24.7.1",
+    "moment": "^2.24.0",
     "node-fetch": "^2.3.0",
+    "sequelize": "^5.17.0",
+    "sqlite3": "^4.1.0",
     "tsbb": "^1.1.3"
   }
 }
